# factoralign

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: checks.ipynb  example.ipynb
src/factoralign/: aaf.py  alignment.py  constraints.py  latent.py  optimizer.py  projection.py  risk.py
tests/: test_core.py
