[project]
name = "factoralign"
version = "0.1.0"
description = "Diagnostics and correction tools for factor alignment problems in portfolio optimization."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "cvxpy",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "matplotlib",
    "jupyter",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88